# ICAlgorithm

./: compile_commands.json
ICAlgorithm/: .gitignore  CMakeLists.txt  build_project.sh
ICAlgorithm/hic_controller/config/: hic_state_observer.jsonc  hic_torque_sensor.jsonc
ICAlgorithm/hic_controller/include/: README.md  hic_common_types.h  hic_frames.hpp
ICAlgorithm/hic_controller/include/hic_controller/: README.md
ICAlgorithm/hic_controller/include/hic_controller/control/: README.md  hic_cartesian_impedance_core.h  hic_joint_impedance_core.h
ICAlgorithm/hic_controller/include/hic_controller/coordinator/: README.md  hic_control_coordinator.h
ICAlgorithm/hic_controller/include/hic_controller/dynamics/: README.md  anthorDynamics.h  dsDynamics.h  elfinDynamics.h  hic_dynamics_adapter.h  hic_dynamics_base.h  palletDynamics.h  sevendofDynamics.h  urDynamics.h
ICAlgorithm/hic_controller/include/hic_controller/interface/: README.md  hic_c_api.h  hic_export.h
ICAlgorithm/hic_controller/include/hic_controller/kinematics/: DSKinematics.h  README.md  URKinematics.h  elfinKinematics.h  hic_kinematics_adapter.h  hic_kinematics_base.h  palletKinematics.h
ICAlgorithm/hic_controller/include/hic_controller/sensing/: README.md  hic_interaction_force_observer.h
ICAlgorithm/hic_controller/include/hic_controller/state/: README.md  hic_robot_state_observer.h
ICAlgorithm/hic_controller/include/hic_controller/types/: README.md  hic_c_api_types.h  hic_config.h  hic_types.h
ICAlgorithm/hic_controller/src/: hic_c_api.cpp
ICAlgorithm/hic_controller/src/common/: hic_common_constants.h  hic_common_types.h  hic_frames.cpp  hic_frames.hpp  hic_kdl_utility.cpp  hic_kdl_utility.h
ICAlgorithm/hic_controller/src/control/: hic_cartesian_impedance_core.cpp  hic_joint_impedance_core.cpp
ICAlgorithm/hic_controller/src/coordinator/: hic_control_coordinator.cpp
ICAlgorithm/hic_controller/src/dynamics/: anthorDynamics.cpp  dsDynamics.cpp  dynamicsBase.cpp  elfinDynamics.cpp  hic_dynamics_adapter.cpp  palletDynamics.cpp  sevendofDynamics.cpp  urDynamics.cpp
ICAlgorithm/hic_controller/src/kinematics/: DSKinematics.cpp  URKinematics.cpp  elfinKinematics.cpp  hic_kinematics_adapter.cpp  kinematicsBase.cpp  palletKinematics.cpp
ICAlgorithm/hic_controller/src/sensing/: hic_interaction_force_observer.cpp
ICAlgorithm/hic_controller/src/state/: hic_robot_state_observer.cpp
ICAlgorithm/hic_controller/test/: hic_controller_cli.cpp  hic_dual_process_demo.cpp  hic_dual_process_shared.h  hic_impedance_demo.cpp  hic_state_generator.cpp
